Add initial impl for handling touch events

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@ function onload()
     tileCanvas.addEventListener('mousemove', mousemove, false);
     tileCanvas.addEventListener('mousedown', mousedown, false);
     tileCanvas.addEventListener('mouseup', mouseup, false);
+
+    initTouchHandlers();
 }
 
 function loaded() 
@@ -435,6 +437,41 @@ function mousemove(evt) {
     }
 }
 
+
+function touchHandler(event)
+{
+    var touches = event.changedTouches,
+        first = touches[0],
+        type = "";
+         switch(event.type)
+    {
+        case "touchstart": type = "mousedown"; break;
+        case "touchmove":  type="mousemove"; break;        
+        case "touchend":   type="mouseup"; break;
+        default: return;
+    }
+
+             //initMouseEvent(type, canBubble, cancelable, view, clickCount, 
+    //           screenX, screenY, clientX, clientY, ctrlKey, 
+    //           altKey, shiftKey, metaKey, button, relatedTarget);
+
+    var simulatedEvent = document.createEvent("MouseEvent");
+    simulatedEvent.initMouseEvent(type, true, true, window, 1, 
+                              first.screenX, first.screenY, 
+                              first.clientX, first.clientY, false, 
+                              false, false, false, 0/*left*/, null);
+
+                                                                                 first.target.dispatchEvent(simulatedEvent);
+    event.preventDefault();
+}
+
+function initTouchHandlers() 
+{
+    document.addEventListener("touchstart", touchHandler, true);
+    document.addEventListener("touchmove", touchHandler, true);
+    document.addEventListener("touchend", touchHandler, true);
+    document.addEventListener("touchcancel", touchHandler, true);    
+}
 
 </script>
 </html>
