--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 
 <script type='text/javascript'>
 
-var imageFileName = 'assets/images/image01.jpg';
-
-var curImageIndex = '01';
-var numAssetImages = 10;
+var numAssetImages = 11;
+var imageFileName = getNextImage();
 
 
 
@@ -205,6 +203,11 @@ function redraw()
         ctx.drawImage( movingTile.canvas, movingTile.locX, movingTile.locY );
     }
 
+    if ( curDestTile )
+    {
+        ctx.fillRect( movingTile.locX, movingTile.locY, movingTile.width, movingTile.height );
+    }
+
     ctx.restore();
 }
 
@@ -275,7 +278,8 @@ function onScrambleTiles()
 
 var mouseX = 0.0, mouseY = 0.0;
 var tile0X = 0.0, tile0Y = 0.0;
-var movingTile = null;
+var movingTile = null, curDestTile = null;
+
 
 var mouseDownEvt = false;
 var movingTileStartX, movingTileStartY;
@@ -387,6 +391,19 @@ function mousemove(evt) {
 
         mouseX = curMouseX;
         mouseY = curMouseY;
+
+        curDestTile = null;
+        for (var i = 0; i < totalNumTiles; i++) {
+            var tile = tiles[i];
+            if (movingTile != tile) {
+                if (mouseX > tile.locX && mouseX < tile.locX + tile.canvas.width) {
+                    if (mouseY > tile.locY && mouseY < tile.locY + tile.canvas.height) {
+                        curDestTile = tile;
+                        break;
+                    }
+                }
+            }
+        }
 
         redraw();
     }
