change picture icon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <input type="file" name="image_src" id="fileOpen" onchange = 'handleFileOpen()' style='display:none'/>
     <div style="text-align:center"> 
-        <input type='image' id = 'fileOpenButton' src='assets/images/pictures.png' align='middle'> </input>
+        <input type='image' id = 'fileOpenButton' src='assets/images/photoBooth.png' align='middle'> </input>
     </div>
 </body>
 
