--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <title>Tiled Jigsaw Puzzle</title>
 </head>
 
-<body onresize='resize()' onload='onload()'  style='position: absolute; padding:0; margin:0; height: 100%; width:100%'>
-    <canvas id="gameCanvas" onmousedown = 'onmousedown1()' 'border:0px'></canvas>
-    <canvas id="originalImageCanvas" style='border:0px'></canvas>
+<body onresize='resize()' onload='onload()'  style='background-color:silver; position: absolute; padding:0; margin:0; height: 100%; width:100%'>
+    <canvas id="tileCanvas"></canvas>
+    <canvas id="solutionCanvas"></canvas>
     
     <input type="file" name="image_src" id="fileOpen" onchange = 'handleFileOpen()' style='display:none'/>
-    <div style="text-align:center"> 
+    <div> 
         <input type='image' id = 'fileOpenButton' src='assets/images/Photo-Booth-icon.png' align='middle'> </input>
     </div>
 </body>
@@ -31,8 +31,8 @@ var tiles = new Array();
 
 function onload()
 {
-    tileCanvas = document.getElementById('gameCanvas');
-    solutionCanvas = document.getElementById('originalImageCanvas');
+    tileCanvas = document.getElementById('tileCanvas');
+    solutionCanvas = document.getElementById('solutionCanvas');
 
     img = new Image();
     img.onload = function () { loaded(); }
@@ -231,10 +231,6 @@ function resize()
         ctx.restore();
     }
 
-    function onmousedown1(e)
-    {
-    }
-
     ////////////////////////////////////////
     function Tile( row, col, image )
     {
@@ -349,12 +345,11 @@ function resize()
     function mouseup(evt) {
         destTileWhileMouseMove = null;
 
-        if (mouseDownEvt == false) {
+        if (mouseDownEvt == false || puzzleSolved == true ) {
             return;
         }
 
         if (movingTile == null) {
-            alert(false);
             mouseDownEvt = false;
             return;
         }
