disable sound for now
there are some synchronization issue with audio

--- a/index.html
+++ b/index.html
@@ -377,8 +377,8 @@ function resize()
             movingTile.locX = movingTileStartX;
             movingTile.locY = movingTileStartY;
             swapTiles( movingTile, destinationTile );
-            var snapSound = new Audio( tileSnapSound );
-            snapSound.play();
+            //var snapSound = new Audio( tileSnapSound );
+            //snapSound.play();
         }
         else if (movingTile) {
             movingTile.locX = movingTileStartX;
