show audio control

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div> 
         <input type='image' id = 'fileOpenButton' src='assets/images/selectPhoto.png' align='middle'> </input>
     </div>	
-	<audio id='tileSnapAudio'>  
+	<audio id='tileSnapAudio' controls>  
 		<source src="assets/audio/tileSnap.wav">
 		<source src="assets/audio/tileSnap.mp3">
 	</audio>	
