--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div> 
         <input type='image' id = 'fileOpenButton' src='assets/images/selectPhoto.png' align='middle'> </input>
     </div>	
-	<audio id='tileSnapAudio' controls>  
+	<audio id='tileSnapAudio'>  
 		<source src="assets/audio/tileSnap.wav">
 		<source src="assets/audio/tileSnap.mp3">
 	</audio>	
@@ -383,7 +383,7 @@ function resize()
             swapTiles( movingTile, destinationTile );
 
 			var audio = document.getElementById( 'tileSnapAudio' );
-			audio.currentTime = 0;
+			//audio.currentTime = 0;
 			audio.play();
         }
         else if (movingTile) {
