Place solution canvas before tile canvas
and center both horizontally

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>Tiled Jigsaw Puzzle</title>
 </head>
 
-<body onresize='resize()' onload='onload()'  style='background-color:silver; position: absolute; padding:0; margin:0; height: 100%; width:100%'>
-    <canvas id="tileCanvas"></canvas>
+<body onresize='resize()' onload='onload()'  style='background-color:silver; position: absolute; padding:0; margin:0; height: 100%; width:100%; ; text-align:center'>
     <canvas id="solutionCanvas"></canvas>
+    <canvas id="tileCanvas"></canvas>
     
     <input type="file" name="image_src" id="fileOpen" onchange = 'handleFileOpen()' accept="image/*" style='display:none'/>
     <div> 
